<resources>
    <string name="app_name">pico botella</string>
    <string name="texto_splash">pico botella</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btnCloseDialog">Cerrar</string>
    <string name="retos">Retos</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="agregar_reto">Agregar Reto</string>
    <string name="escriba_el_reto">Escriba el reto</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="title_dialog_eliminar">¿Desear eliminar el siguente reto?</string>
    <string name="editar_reto">Editar Reto</string>
    <string name="qualification">Calificacion App</string>
    <string name="title1">¿Como se juega?</string>
    <string name="descripcion1">Los jugadores forman un circulo y en el centro colocan el dispositivo movil, luego tocan el boton parpadeante para girar la botella.\nEl jugador que se;ale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.</string>
    <string name="title2">¿Quien gana?</string>
    <string name="descriprion2">Gana el ultimo jugador que no abandone el juego.</string>
    <string name="rules">Reglas del juego</string>
</resources>