<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gradient_end"
        tools:context=".view.fragment.RulesPlayFragment">

        <include
            android:id="@+id/ic_Content_Bar"
            layout="@layout/bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_Content_Bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/title1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/descripcion1"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto"
                android:text="@string/title2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/descriprion2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/campeon"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>